ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplifyit-ingress
spec:
  rules:
    # - host: "app.192.168.49.2"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplifyit-client-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: simplifyit-server-service
                port:
                  number: 4000
